# apps/api/src/swagger-spec.yaml
@@ -125,6 +125,38 @@ paths:
                     $ref: '#/components/responses/OK'
                 400:
                     $ref: '#/components/responses/BadRequest'
+    /project/{id}/tasklists:
+        get:
+            description: Returns all related tasklists
+            tags:
+                - Project
+            produces:
+                - application/json
+            parameters:
+                - $ref: '#/components/parameters/id'
+            responses:
+                200:
+                    description: api tasklis
+                    schema:
+                        type: array
+                        items:
+                            $ref: '#/components/schemas/ApiTaskList'
+    /project/{id}/tasks:
+        get:
+            description: Returns all related tasks
+            tags:
+                - Project
+            produces:
+                - application/json
+            parameters:
+                - $ref: '#/components/parameters/id'
+            responses:
+                200:
+                    description: api tasklis
+                    schema:
+                        type: array
+                        items:
+                            $ref: '#/components/schemas/ApiTaskWithTaskListId'
     /project:
         get:
             description: Return all projects
@@ -273,6 +305,14 @@ components:
                           type: string
                       done:
                           type: boolean
+
+        ApiTaskWithTaskListId:
+            allOf:
+                - $ref: '#/components/schemas/ApiTask'
+                - type: object
+                  properties:
+                      tasklist_id:
+                          type: number
         Error:
             type: object
             properties:
